# Mate-Extra

./: README
indicator-applet/: ChangeLog  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
mate-bluetooth/: ChangeLog  ChangeLog.pre-2.27  autogen.sh  configure.ac
mate-bluetooth/applet/: Makefile.am  main.c  mate-bluetooth-applet.1  mate-bluetooth-applet.desktop.in.in
mate-bluetooth/icons/: Makefile.am
mate-calc/: Makefile.in  aclocal.m4  config.h.in  configure
mate-character-map/: ChangeLog  ChangeLog.pre-2-23  aclocal.m4  configure  configure.ac
mate-conf-dbus/: ChangeLog  README  configure.in  intltool-extract.in  intltool-merge.in  intltool-update.in
mate-conf-editor/: ChangeLog  ChangeLog.pre-git  MAINTAINERS  configure.in
mate-disk-utility/: configure.ac
python-mate-desktop/: .bzrignore  .cvsignore  .gitignore  AUTHORS  COPYING  ChangeLog.pre-2.25  Makefile.am  Makefile.in  NEWS  README  acinclude.m4  aclocal.m4  autogen.sh  bugbuddy.py  config.h.in  configure  configure.ac  generate-ChangeLog  mate-python-desktop-2.0.pc.in  pyrsvg-2.0.pc.in  setup.py  wscript
python-mate-desktop/braseroburn/: Makefile.am  Makefile.in  brasero-types.c  brasero-types.h  brasero_burn.defs  brasero_burn.override  brasero_burn_module.c  wscript
python-mate-desktop/braseromedia/: Makefile.am  Makefile.in  bm_module.c  brasero_media.defs  brasero_media.override  wscript
python-mate-desktop/bzrplugins/: gnulog.py
python-mate-desktop/cajaburn/: .cvsignore  Makefile.am  Makefile.in  caja_burn.defs  caja_burn.override  nb_module.c  nb_track.c  nb_track.h  wscript
python-mate-desktop/distro/archlinux/: PKGBUILD
python-mate-desktop/distro/ubuntu/: build
python-mate-desktop/docs/: Makefile.am  Makefile.in  html.xsl  pygtk-ref-docs.make
python-mate-desktop/docs/gtksourceview/: .cvsignore  Makefile.am  Makefile.in  gtksourceview-classes.xml  gtksourceview-gtksourcebuffer.xml  gtksourceview-gtksourcelanguage.xml  gtksourceview-gtksourcelanguagesmanager.xml  gtksourceview-gtksourcemarker.xml  gtksourceview-gtksourceprintjob.xml  gtksourceview-gtksourcestylescheme.xml  gtksourceview-gtksourcetag.xml  gtksourceview-gtksourcetagstyle.xml  gtksourceview-gtksourcetagtable.xml  gtksourceview-gtksourceview.xml  wscript
python-mate-desktop/docs/mateprint/: .cvsignore  Makefile.am  Makefile.in  mateprint-classes.xml  mateprint-mateprintconfig.xml  mateprint-mateprintcontext.xml  mateprint-mateprintfont.xml  mateprint-mateprintfontface.xml  mateprint-mateprintglyphlist.xml  mateprint-mateprintjob.xml  wscript
python-mate-desktop/docs/mateprintui/: Makefile.am  Makefile.in  mateprintui-classes.xml  mateprintui-mateprintuidialog.xml  mateprintui-mateprintuifontdialog.xml  mateprintui-mateprintuifontpreview.xml  mateprintui-mateprintuifontselection.xml  mateprintui-mateprintuijobpreview.xml  mateprintui-mateprintuipaperselector.xml  mateprintui-mateprintuipreview.xml  wscript
python-mate-desktop/evince/: Makefile.am  Makefile.in  evince.defs  evince.override  evincemodule.c  wscript
python-mate-desktop/evolution/: Makefile.am  Makefile.in  __init__.py  ebook-enums.c  ebook-enums.h  ebook.defs  ebook.override  ebookmodule.c  ecal.defs  ecal.override  ecalmodule.c  evo-addressbook.c  evo-addressbook.h  evo-calendar.c  evo-calendar.h  evo-contact.c  evo-contact.h  evo-ebook-environment.c  evo-ebook-environment.h  evo-ecal-environment.c  evo-ecal-environment.h  evolution.h  gen-defs.sh  override_common.c  override_common.h  wscript
python-mate-desktop/examples/: keyring-async.py  keyring.py  wnck_example.py
python-mate-desktop/examples/applet/: MATE_PythonAppletSample.server  README  applet.py
python-mate-desktop/examples/braseroburn/: write-audio-video.py  write-data.py  write-image.py
python-mate-desktop/examples/braseromedia/: drive_selection.py
python-mate-desktop/examples/cajaburn/: blank_disc.py  drive_selection.py  write_iso.py
python-mate-desktop/examples/evolution/: Makefile.am  bookquery.py  bookview.py  evo-test.py  evolution.glade  vcal-test.py
python-mate-desktop/examples/gtksourceview/: test-widget.py
python-mate-desktop/examples/mateprint/: README  example_01.py  example_02.py  example_03.py  example_04.py  example_05.py  example_06.py  example_08.py  example_09.py  example_10.glade  example_10.py  example_11.py  test-print.py
python-mate-desktop/examples/mediaprofiles/: profiles.py
python-mate-desktop/examples/rsvg/: rsvg-cairo.py
python-mate-desktop/gtksourceview/: .cvsignore  Makefile.am  Makefile.in  gtksourceview.defs  gtksourceview.override  gtksourceviewmodule.c  wscript
python-mate-desktop/gtop/: ChangeLog  Makefile.am  Makefile.in  gtop.c  wscript
python-mate-desktop/marco/: .cvsignore  Makefile.am  Makefile.in  marco.defs  marco.override  marcomodule.c  wscript
python-mate-desktop/mateapplet/: .cvsignore  Makefile.am  Makefile.in  applet.defs  applet.override  applet.py  appletmodule.c  wscript
python-mate-desktop/matedesktop/: .cvsignore  Makefile.am  Makefile.in  __init__.py  _matedesktop.defs  _matedesktop.override  _matedesktopmodule.c  wscript
python-mate-desktop/matekeyring/: .cvsignore  Makefile.am  Makefile.in  matekeyring-argtypes.py  matekeyring.defs  matekeyring.override  matekeyringmodule.c  wscript
python-mate-desktop/mateprint/: .cvsignore  Makefile.am  Makefile.in  __init__.py  art-gtype.c  art-gtype.h  art.defs  print-arg-types.py  print.defs  print.override  printmodule.c  printui.defs  printui.override  printuimodule.c  wscript
python-mate-desktop/mediaprofiles/: .cvsignore  Makefile.am  Makefile.in  mediaprofiles.defs  mediaprofiles.override  mediaprofilesmodule.c  wscript
python-mate-desktop/rsvg/: .cvsignore  Makefile.am  Makefile.in  rsvg.override  rsvgmodule.c  wscript
python-mate-desktop/tests/: Makefile.am  Makefile.in  common.py  runtests.py
python-mate-desktop/totem/: .cvsignore  Makefile.am  Makefile.in  plparser.defs  plparser.override  plparsermodule.c  wscript
python-mate-desktop/wnck/: .cvsignore  Makefile.am  Makefile.in  wnck.defs  wnck.override  wnckmodule.c  wscript
(+1033 files in other folders)
