EXTRA_DIST = common.xsl html.xsl ref-html-style.xsl tut-html-style.xsl \
	     pdf-style.xsl pdf.xsl devhelp.xsl pygtk-ref-docs.make

SUBDIRS=

if BUILD_GTKSOURCEVIEW
  SUBDIRS += gtksourceview
endif

if BUILD_MATEPRINT
  SUBDIRS += mateprint
endif

if BUILD_MATEPRINTUI
  SUBDIRS += mateprintui
endif
